Adding Dark mode

--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
   </head>
   <body>
     <div class="container">
+      
+      <div class="toggle-container">
+        <input type="checkbox" id="darkModeToggle" class="toggle" />
+        <label for="darkModeToggle" class="toggle-label">
+          <i class="bx bx-moon"></i>
+          <i class="bx bx-sun"></i>
+        </label>
+      </div>
+
       <div class="search-box">
         <div class="input-container">
           <input
